--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,17 @@
 {
   "short_name": "Benji Thompson",
   "name": "Benji Thompson's Portfolio",
-  "icons": [],
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }, {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
