--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format-check": "npx prettier -c 'src/**/*.jsx'",
-    "format-write": "npx prettier -w 'src/**/*.jsx'"
+    "format-check": "npx prettier -c 'src/**/*.{js,jsx}'",
+    "format-write": "npx prettier -w 'src/**/*.{js,jsx}'"
   },
   "eslintConfig": {
     "extends": [
