--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "typescript": "^5.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "tsc && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "format-check": "npx prettier -c 'src/**/*.{js,jsx,ts,tsx}'",
     "format-write": "npx prettier -w 'src/**/*.{js,jsx,ts,tsx}'"
   },
@@ -44,6 +42,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.8.4"
+    "@vitejs/plugin-react": "^3.1.0",
+    "prettier": "2.8.4",
+    "vite": "^4.2.1",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.8"
   }
 }
