--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:ci": "jest --no-watchAll",
     "ci": "npm run test:ci && tsc && vite build",
     "format-check": "npx prettier -c 'src/**/*.{js,jsx,ts,tsx}'",
-    "format-write": "npx prettier -w 'src/**/*.{js,jsx,ts,tsx}'"
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -47,13 +47,18 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "lint-staged": "^13.2.1",
     "prettier": "2.8.4",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "vite": "^4.2.1",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.8"
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,md,ts,tsx}": "prettier --write"
   }
 }
